crates/compiler/semantic/tests/snapshots/diagnostics__functions::function_calls::test_function_call_with_undeclared_argument.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::function_calls::test_function_call_with_undeclared_argument"
---
Fixture: semantic_tests::functions::function_calls::test_function_call_with_undeclared_argument
============================================================
Source code:

        func helper(x: felt) -> felt {
            return x;
        }

        func test() {
            let result = helper(undefined_var);
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::functions::function_calls::test_function_call_with_undeclared_argument:7:33 ]
   │
 7 │             let result = helper(undefined_var);
   │                                 ──────┬──────  
   │                                       ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::functions::function_calls::test_function_call_with_undeclared_argument:6:14 ]
   │
 6 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
