crates/compiler/semantic/tests/snapshots/diagnostics__functions::parameter_validation::test_multiple_parameters_some_unused.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::parameter_validation::test_multiple_parameters_some_unused"
---
Fixture: semantic_tests::functions::parameter_validation::test_multiple_parameters_some_unused
============================================================
Source code:

        fn test(used: felt, unused1: felt, unused2: felt) -> felt {
            return used;
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused1'
   ╭─[ semantic_tests::functions::parameter_validation::test_multiple_parameters_some_unused:2:29 ]
   │
 2 │         fn test(used: felt, unused1: felt, unused2: felt) -> felt {
   │                             ───┬───  
   │                                ╰───── Unused variable 'unused1'
───╯

--- Diagnostic 2 ---
[1002] Warning: Unused variable 'unused2'
   ╭─[ semantic_tests::functions::parameter_validation::test_multiple_parameters_some_unused:2:44 ]
   │
 2 │         fn test(used: felt, unused1: felt, unused2: felt) -> felt {
   │                                            ───┬───  
   │                                               ╰───── Unused variable 'unused2'
───╯
