crates/compiler/semantic/tests/snapshots/diagnostics__functions::return_types::test_function_return_undeclared_variable.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::return_types::test_function_return_undeclared_variable"
---
Fixture: semantic_tests::functions::return_types::test_function_return_undeclared_variable
============================================================
Source code:

        fn test() -> felt {
            return undefined_var;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::functions::return_types::test_function_return_undeclared_variable:3:20 ]
   │
 3 │             return undefined_var;
   │                    ──────┬──────  
   │                          ╰──────── Undeclared variable 'undefined_var'
───╯
